  * fsck: Avoid complaining about required content of dead repositories.
  * drop: Avoid redundant object directory thawing.
  * httpalso: Windows url fix.
  * Added remote.name.annex-web-options config, which is a per-remote
    version of the annex.web-options config.
  * migrate: Fix --remove-size to work when a file is not present.
    Fixes reversion introduced in version 10.20231129.

 -- Joey Hess <id@joeyh.name>  Fri, 21 Mar 2025 12:27:11 -0400

git-annex (10.20250320) upstream; urgency=medium

  * Added the compute special remote.
  * addcomputed: New command, adds a file that is generated by a compute
    special remote.
  * recompute: New command, recomputes computed files.
  * findcomputed: New command, displays information about computed files.
  * Support help.autocorrect settings "prompt", "never", and "immediate".
  * Allow setting remote.foo.annex-tracking-branch to a branch name
    that contains "/", as long as it's not a remote tracking branch.
  * Added OsPath build flag, which speeds up git-annex's operations on files.
  * git-lfs: Added an optional apiurl parameter.
    (This needs version 1.2.5 of the haskell git-lfs library to be used.)
  * fsck: Remember the files that are checked, so a later run with --more
    will skip them, without needing to use --incremental.

 -- Joey Hess <id@joeyh.name>  Thu, 20 Mar 2025 13:10:48 -0400

git-annex (10.20250115) upstream; urgency=medium

  * Improve handing of ssh connection problems during 
    remote annex.uuid discovery.
  * log: Support --key, as well as --branch and --unused.
  * Avoid verification error when addurl --verifiable is used
    with an url claimed by a special remote other than the web.
  * Fix installation on Android.
  * Allow enableremote of an existing webdav special remote that has
    read-only access.
  * git-remote-annex: Use enableremote rather than initremote.
  * Windows: Fix permission denied error when dropping files that
    have the readonly attribute set.