@@ -36,9 +36,14 @@ uriRegName' a = fixup $ uriRegName a
 		len  = length rest - 1
 	fixup x = x
 
-{- Hostname of an URL repo. -}
+{- Hostname of an URL repo. 
+ -
+ - An IPV6 link-local address in an url can include a
+ - scope, eg "%wlan0". The "%" is necessarily URI-encoded
+ - as "%25" in the URI. So the hostname gets URI-decoded here.
+ -}
 host :: Repo -> Maybe String
-host = authpart uriRegName'
+host = authpart (unEscapeString . uriRegName')
 
 {- Port of an URL repo, if it has a nonstandard one. -}
 port :: Repo -> Maybe Integer
@@ -53,7 +58,7 @@ port r =
 hostuser :: Repo -> Maybe String
 hostuser r = (++)
 	<$> authpart uriUserInfo r
-	<*> authpart uriRegName' r
+	<*> host r
 
 {- The full authority portion an URL repo. (ie, "user@host:port") -}
 authority :: Repo -> Maybe String
