@@ -11,6 +11,7 @@ git-annex (10.20250321) UNRELEASED; urgency=medium
     version of the annex.web-options config.
   * migrate: Fix --remove-size to work when a file is not present.
     Fixes reversion introduced in version 10.20231129.
+  * Support git remotes that use a IPV6 link-local address with a zone ID.
 
  -- Joey Hess <id@joeyh.name>  Fri, 21 Mar 2025 12:27:11 -0400
 
